--- a/online-zoo/source/sass/blocks/watch-your-favorite-animal.scss
+++ b/online-zoo/source/sass/blocks/watch-your-favorite-animal.scss
@@ -83,6 +83,7 @@
 @media (max-width: $tablet-width) {
   .watch-your-favorite-animal {
     background-image: url("../assets/img/giant-panda_tablet.jpg");
+    background-position: center -34px;
     padding-bottom: 41px;
   }
   .watch-your-favorite-animal__wrapper {
